--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "rio-diff"
 description = "Raster comparison plugin for rasterio"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11"
 license = "MIT"
 license-files = ["LICEN[CS]E*"]
 authors = [
@@ -17,8 +17,9 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "numpy>=2.3.4",
-    "rasterio>=1.4.3",
+    "click>=7.0",
+    "numpy>=2.0",
+    "rasterio>=1.3",
 ]
 
 [project.urls]
